# parsers

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.markdown  HLint.hs  LICENSE  README.markdown  Text-Parser-Char.html  Text-Parser-Combinators.html  Text-Parser-Expression.html  Text-Parser-LookAhead.html  Text-Parser-Permutation.html  Text-Parser-Token-Highlight.html  Text-Parser-Token-Style.html  Text-Parser-Token.html  cabal.haskell-ci  doc-index-60.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index.html  index-frames.html  index.html  (+10 more)
.github/workflows/: haskell-ci.yml
Text/Parser/: Char.hs  Combinators.hs  Expression.hs  Permutation.hs  Token.hs
Text/Parser/Token/: Highlight.hs  Style.hs
src/: Text-Parser-Char.html  Text-Parser-Combinators.html  Text-Parser-Expression.html  Text-Parser-LookAhead.html  Text-Parser-Permutation.html  Text-Parser-Token-Highlight.html  Text-Parser-Token-Style.html  Text-Parser-Token.html
src/Text/Parser/: Char.hs  Combinators.hs  Expression.hs  Input.hs  LookAhead.hs  Permutation.hs  Token.hs
src/Text/Parser/Token/: Highlight.hs  Style.hs
tests/: QuickCheck.hs
