name:          parsers
category:      Text, Parsing
version:       0.12.3
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/parsers/
bug-reports:   http://github.com/ekmett/parsers/issues
copyright:     Copyright (C) 2010-2013 Edward A. Kmett
synopsis:      Parsing combinators
description:  
  This library provides convenient combinators for working with and building parsing combinator libraries.
  .
  Given a few simple instances, e.g. for the class 'Text.Parser.Combinators.Parsing' in "Text.Parser.Combinators.Parsing" you
  get access to a large number of canned definitions. Instances exist for the parsers provided by @parsec@,
  @attoparsec@ and base’s "Text.Read".
build-type:    Custom

extra-source-files: .travis.yml

source-repository head
  type: git
  location: git://github.com/ekmett/parsers.git

library
  default-language: Haskell2010
  exposed-modules:
    Text.Parser.Char
    Text.Parser.Combinators
    Text.Parser.LookAhead
    Text.Parser.Permutation
    Text.Parser.Expression
    Text.Parser.Token
    Text.Parser.Token.Style
    Text.Parser.Token.Highlight

  hs-source-dirs: src

  ghc-options: -Wall -fno-warn-wrong-do-bind -fwarn-monomorphism-restriction -fwarn-identities -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns

  build-depends:
    base                 >= 4        && < 5,
    base-orphans         >= 0.3      && < 1,
    charset              >= 0.3      && < 1,
    containers           >= 0.4      && < 0.6,
    parsec               >= 3.1      && < 3.2,
    attoparsec           >= 0.12.1.4 && < 0.14,
    text                 >= 0.10     && < 1.3,
    transformers         >= 0.2      && < 0.5,
    scientific           >= 0.3      && < 0.4,
    unordered-containers >= 0.2      && < 0.3

-- Verify the results of the examples
test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base,
    bytestring,
    containers,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath,
    QuickCheck,
    quickcheck-instances
  ghc-options: -Wall -threaded
  hs-source-dirs: tests

test-suite quickcheck
  type:    exitcode-stdio-1.0
  main-is: QuickCheck.hs
  default-language: Haskell2010
  build-depends:
    attoparsec,
    base == 4.*,
    bytestring,
    parsec >= 3,
    parsers,
    QuickCheck,
    quickcheck-instances
  ghc-options: -Wall -threaded
  hs-source-dirs: tests
