name:          parsers
category:      Text, Parsing
version:       0.12.12
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/parsers/
bug-reports:   http://github.com/ekmett/parsers/issues
copyright:     Copyright (C) 2010-2013 Edward A. Kmett
synopsis:      Parsing combinators
description:
  This library provides convenient combinators for working with and building parsing combinator libraries.
  .
  Given a few simple instances, e.g. for the class 'Text.Parser.Combinators.Parsing' in "Text.Parser.Combinators.Parsing" you
  get access to a large number of canned definitions. Instances exist for the parsers provided by @parsec@,
  @attoparsec@ and base’s "Text.Read".
build-type:    Simple
tested-with:   GHC==8.0.2
             , GHC==8.2.2
             , GHC==8.4.4
             , GHC==8.6.5
             , GHC==8.8.4
             , GHC==8.10.7
             , GHC==9.0.2
             , GHC==9.2.8
             , GHC==9.4.8
             , GHC==9.6.6
             , GHC==9.8.2
             , GHC==9.10.1

extra-source-files:
  .hlint.yaml
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: https://github.com/ekmett/parsers.git

flag binary
  default: True
  description:
    You can disable the use of the `binary` package using `-f-binary`.

flag parsec
  default: True
  description:
    You can disable the use of the `parsec` package using `-f-parsec`.

flag attoparsec
  default: True
  description:
    You can disable the use of the `attoparsec` package using `-f-attoparsec`.

library
  default-language: Haskell2010
  exposed-modules:
    Text.Parser.Char
    Text.Parser.Combinators
    Text.Parser.LookAhead
    Text.Parser.Permutation
    Text.Parser.Expression
    Text.Parser.Token
    Text.Parser.Token.Style
    Text.Parser.Token.Highlight

  hs-source-dirs: src

  ghc-options: -Wall -Wno-wrong-do-bind -Wmonomorphism-restriction -Wincomplete-record-updates -Widentities -Wincomplete-uni-patterns -Wno-trustworthy-safe

  build-depends:
    base                 >= 4.9      && < 5,
    charset              >= 0.3      && < 1,
    containers           >= 0.4      && < 0.9,
    text                 >= 0.10     && < 2.2,
    transformers         >= 0.2      && < 0.7,
    mtl                  >= 2.0.1    && < 2.4,
    scientific           >= 0.3      && < 0.4,
    unordered-containers >= 0.2      && < 0.3

  if flag(binary)
    build-depends: binary     >= 0.7.2    && < 1
  if flag(parsec)
    build-depends: parsec     >= 3.1      && < 3.2
  if flag(attoparsec)
    build-depends: attoparsec >= 0.12.1.4 && < 0.15
  if impl(ghc < 8.0)
    build-depends: semigroups >= 0.12     && < 1

test-suite quickcheck
  type:    exitcode-stdio-1.0
  main-is: QuickCheck.hs
  default-language: Haskell2010
  build-depends:
    base == 4.*,
    bytestring,
    parsers,
    QuickCheck,
    quickcheck-instances
  ghc-options: -Wall -threaded
  hs-source-dirs: tests

  if flag(parsec)
    build-depends: parsec >= 3
  if flag(attoparsec)
    build-depends: attoparsec
